--- a/style.css
+++ b/style.css
@@ -6,6 +6,17 @@
   background-color: yellow;
 }
 
-h4 {
+#Linea2 {
+  color: green;
+}
+.linea3y4 {
+  background-color: black;
+  color: white;
+}
+.linea5y6 {
   color: blue;
+}
+
+#linea7 {
+  text-shadow: 2px 2px black;
 }
