--- a/style.css
+++ b/style.css
@@ -1,24 +1,102 @@
-#man {
+html {
+  font-family: "Montserrat", sans-serif;
+}
+
+body {
+  margin: 0;
+  background-color: #ffffff;
+}
+
+header h1 {
+  background-color: pink;
+  color: black;
+  padding: 3rem 2rem;
+  font-size: 3rem;
+  text-align: center;
+  border-radius: 0.5rem;
+  text-shadow: 3px 2px rgb(56, 55, 55);
+}
+
+h2 {
+  font-size: 2.5rem;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+h3 {
+  font-size: 2rem;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+h4 {
+  font-size: 1.5rem;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+h5 {
+  font-size: 1rem;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+body p {
+  transition: all 0.3s ease;
+  background-color: #fff;
+  margin: 1rem 0;
+  border-radius: 0.5rem;
+  padding: 1rem 1rem;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+body p:hover {
+  box-shadow: 0 0.1rem 0.4rem rgba(41, 41, 41, 0.3);
+}
+
+footer {
+  background-color: rgb(245, 187, 187);
+  padding: 3rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer a {
+  transition: color 0.3s ease;
+  color: white;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: cornflowerblue;
+}
+
+/* Go from zero to full opacity */
+@keyframes fadeEffect {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#medico {
   display: block;
   margin-left: 200px;
-  margin-right: 200px;
-  width: 110px;
+  margin-right: 100px;
+  width: 200px;
   height: 120px;
-  filter: drop-shadow(5px 5px green);
-}
-#macnelly {
-  display: block;
-  margin-left: 10px;
-  margin-right: 400px;
-  width: 110px;
-  height: 120px;
-  filter: drop-shadow(5px 5px black);
-}
-#rene {
-  display: block;
-  margin-left: 300px;
-  margin-right: 10px;
-  width: 110px;
-  height: 120px;
-  filter: drop-shadow(5px 5px green);
 }
